[package]
name = "ansi-builder"
version = "0.1.4"
authors = ["Diego-Henriquez <diego@paragonpawns.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ParagonPawns/ansi-builder"
description = "Rust crate that will have tools to construct ansi control sequences."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(windows)'.dependencies]
windows = "0.10.0"

[target.'cfg(windows)'.build-dependencies]
windows = "0.10.0"

[[example]]
name = "color"
path = "examples/color.rs"
